<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity3"
    android:background="#FEF8F8">

    <!-- Layout utama -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Header -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prediksi_penyakit_mental"
            android:textColor="#000"
            android:textSize="24sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="16dp" />

        <!-- Welcome Message -->
        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginBottom="16dp"/>

        <!-- ScrollView wrapping the rest of the content -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true"
            android:layout_marginBottom="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Input Text for User Message -->
                <EditText
                    android:id="@+id/inputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_pesan_anda"
                    android:padding="12dp"
                    android:layout_marginBottom="10dp"
                    android:background="@android:drawable/editbox_background" />

                <!-- Parameter Section -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seberapa_intens_perasaan_negatif_yang_anda_rasakan"
                    style="@style/SeekBarTextStyle"/>

                <SeekBar
                    android:id="@+id/intensitasSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="4"
                    style="@style/CustomSeekBar"/>

                <!-- Repeat for other SeekBars -->
                <!-- Durasi Perasaan -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seberapa_lama_perasaan_ini_berlangsung"
                    style="@style/SeekBarTextStyle" />
                <SeekBar
                    android:id="@+id/durasiSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="4"
                    style="@style/CustomSeekBar"/>

                <!-- Frekuensi Perasaan Negatif -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seberapa_sering_anda_merasakan_perasaan_negatif"
                    style="@style/SeekBarTextStyle" />
                <SeekBar
                    android:id="@+id/frekuensiSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="4"
                    style="@style/CustomSeekBar"/>

                <!-- Pengaruh pada Aktivitas Harian -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seberapa_besar_perasaan_ini_mengganggu_aktivitas_harian_anda"
                    style="@style/SeekBarTextStyle"/>

                <SeekBar
                    android:id="@+id/keseharianSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="4"
                    style="@style/CustomSeekBar"/>


                <!-- Pola Berpikir Negatif -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seberapa_sering_anda_memiliki_pola_berpikir_negatif_tentang_diri_sendiri"
                    style="@style/SeekBarTextStyle"/>
                <SeekBar
                    android:id="@+id/polaNegatifSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="4"
                    style="@style/CustomSeekBar"/>

                <!-- Ketakutan Berlebihan -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seberapa_sering_anda_merasa_takut_pada_situasi_tanpa_alasan_jelas"
                    style="@style/SeekBarTextStyle"/>
                <SeekBar
                    android:id="@+id/ketakutanSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="4"
                    style="@style/CustomSeekBar"
                    android:textSize="16sp"
                    android:textColor="#333333"/>

                <!-- Kesulitan Berkonsentrasi -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seberapa_sering_anda_kesulitan_berkonsentrasi_atau_fokus"
                    style="@style/SeekBarTextStyle" />
                <SeekBar
                    android:id="@+id/konsentrasiSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="4"
                    style="@style/CustomSeekBar"/>

                <!-- Kelelahan Berlebih -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seberapa_sering_anda_merasa_kelelahan_berlebih"
                    style="@style/SeekBarTextStyle"/>
                <SeekBar
                    android:id="@+id/kelelahanSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="4"
                    style="@style/CustomSeekBar"/>

                <!-- Gangguan Tidur -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seberapa_sering_anda_mengalami_gangguan_tidur"
                    style="@style/SeekBarTextStyle" />
                <SeekBar
                    android:id="@+id/tidurSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="4"
                    style="@style/CustomSeekBar"/>

                <!-- Penurunan Minat pada Aktivitas -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seberapa_besar_penurunan_minat_anda_pada_aktivitas_yang_biasanya_disukai"
                    style="@style/SeekBarTextStyle"/>
                <SeekBar
                    android:id="@+id/minatSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="4"
                    style="@style/CustomSeekBar"/>

                <!-- Isolasi Sosial -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seberapa_sering_anda_menghindari_interaksi_sosial"
                    style="@style/SeekBarTextStyle"/>
                <SeekBar
                    android:id="@+id/isolasiSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="4"
                    style="@style/CustomSeekBar"/>


                <!-- Button Kirim -->
                <Button
                    android:id="@+id/sendButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kirim"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rounded_button"
                    android:textColor="#fff"
                    android:textSize="16sp"
                    android:padding="12dp"
                    android:layout_marginBottom="16dp"/>

                <!-- Output TextView -->
                <TextView
                    android:id="@+id/outputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textSize="16sp"
                    android:textColor="#333333"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_card" />

                <TextView
                    android:id="@+id/outputText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hasil_algoritma"
                    android:layout_marginTop="16dp"
                    android:textSize="16sp"/>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <!-- Bottom Navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:outlineSpotShadowColor="@color/Light_red"
        app:itemIconTint="#FF5E5E"
        app:itemTextColor="#FFA4A4"
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        android:background="#FFFFFF"
        app:menu="@menu/bottom_nav_menu"
        android:elevation="4dp" />
</FrameLayout>
