<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEF8F8">

    <!-- Layout utama -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Header -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prediksi_penyakit_fisik"
            android:textColor="#1a1a1a"
            android:textSize="24sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="8dp"
            android:textSize="18sp" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="50dp"
            android:overScrollMode="ifContentScrolls">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/inputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_pesan_anda"
                    android:background="@drawable/rounded_edittext"
                    android:padding="12dp"
                    android:layout_marginBottom="16dp" />

                <!-- SeekBar untuk Gejala -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seberapa_sering_anda_merasa_kelelahan"
                    android:textSize="16sp"
                    android:textColor="#333333"
                    android:layout_marginBottom="4dp" />

                <SeekBar
                    android:id="@+id/fatigueSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="4"
                    android:layout_marginBottom="16dp"
                    style="@style/CustomSeekBar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seberapa_parah_nyeri_yang_anda_rasakan"
                    android:textSize="16sp"
                    android:textColor="#333333"
                    android:layout_marginBottom="4dp" />
                <SeekBar
                    android:id="@+id/painSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="4"
                    android:layout_marginBottom="16dp"
                    style="@style/CustomSeekBar"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seberapa_sering_anda_merasa_mual"
                    android:textSize="16sp"
                    android:textColor="#333333"
                    android:layout_marginBottom="4dp"/>
                <SeekBar
                    android:id="@+id/nauseaSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="4"
                    android:layout_marginBottom="16dp"
                    style="@style/CustomSeekBar"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seberapa_sering_anda_merasa_sesak_napas"
                    android:textSize="16sp"
                    android:textColor="#333333"
                    android:layout_marginBottom="4dp" />
                <SeekBar
                    android:id="@+id/breathSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="4"
                    android:layout_marginBottom="16dp"
                    style="@style/CustomSeekBar"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seberapa_sering_anda_merasa_pusing"
                    android:textSize="16sp"
                    android:textColor="#333333"
                    android:layout_marginBottom="4dp" />
                <SeekBar
                    android:id="@+id/dizzinessSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="4"
                    android:layout_marginBottom="16dp"
                    style="@style/CustomSeekBar"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seberapa_besar_kehilangan_nafsu_makan_yang_anda_alami"
                    android:textSize="16sp"
                    android:textColor="#333333"
                    android:layout_marginBottom="4dp" />
                <SeekBar
                    android:id="@+id/appetiteSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="4"
                    android:layout_marginBottom="16dp"
                    style="@style/CustomSeekBar"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seberapa_lemah_anda_merasa"
                    android:textSize="16sp"
                    android:textColor="#333333"
                    android:layout_marginBottom="4dp" />
                <SeekBar
                    android:id="@+id/weaknessSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="4"
                    android:layout_marginBottom="16dp"
                    style="@style/CustomSeekBar"/>

                <!-- Tombol Kirim -->
                <Button
                    android:id="@+id/sendButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kirim"
                    android:background="@drawable/rounded_button"
                    android:textColor="#FFFFFF"
                    android:layout_marginTop="16dp" />

                <!-- Output Text -->
                <TextView
                    android:id="@+id/outputText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textSize="16sp"
                    android:textColor="#333333"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/rounded_card"
                     />

                <TextView
                    android:id="@+id/outputText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hasil_algoritma"
                    android:layout_marginTop="16dp"
                    android:textSize="16sp"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <!-- Bottom Navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        android:background="#FFFFFF"
        app:menu="@menu/bottom_nav_menu"
        android:elevation="4dp" />
</FrameLayout>
